[package]
name = "sofa-sys"
version = "2020.7.21-beta.1"
authors = ["AlexApps99"]
edition = "2018"
description = "Standards of Fundamental Astronomy (SOFA) Rust bindings"
repository = "https://github.com/AlexApps99/sofa-sys"
license-file = "LICENSE.txt"
keywords = ["astronomy", "sofa", "erfa", "iau", "space"]
categories = ["external-ffi-bindings", "mathematics", "science", "simulation"]
build = "libsofa_c/build.rs"
links = "sofa_c"

[build-dependencies]
cc = "1.0.66"

[build-dependencies.bindgen]
version = "0.56.0"
optional = true

[features]
generate = ["bindgen"]
